# ha-synthetic-sensors

./: .codefactor.yml  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .pre-commit-config.yaml  .prettierrc  Feature_Planning_Syn2_Advanced_Synthetic_Sensors.md  MODULAR_ARCHITECTURE.md  README.md  README.md.backup  SECURITY.md  SPAN_ANALYSIS.md  SPAN_INTEGRATION_ANALYSIS.md  Syn2_Plan.md  boolean_variable_debug.yaml  coverage-integration.xml  debug_avg.py  developer_attribute_readme.md  example_config.yaml  pyproject.toml  setup-hooks.sh  test_boolean_variable_debug.py  test_energy_vs_power_fallback.py  test_mock_debug.py  test_solar_fix_verification.py  validate_examples.py  vulture_whitelist.py
.github/: dependabot.yml
docs/: Cache_Behavior_and_Data_Lifecycle.md  MODULAR_ARCHITECTURE.md  Synthetic_Sensors_Integration_Guide.md  User_Defined_Comparison_Handlers.md  comparison_handler_design.md  cookbook.md  idiom_testing_scenarios.md  integration_data_provider.md  state_and_entity_reference_guide.md  state_and_enty_design_guide.md  vulture_dead_code_detection.md
examples/: README.md  attribute_variables_example.yaml  boolean_logic.yaml  custom_comparison_type.py  custom_integration_example.py  device_association_example.yaml  edge_deep_chain.yaml  edge_multiple_circular.yaml  edge_variable_conflicts.yaml  edge_variable_inheritance.yaml  error_circular_attributes.yaml  error_invalid_data.yaml  error_missing_entity.yaml  error_self_reference.yaml  idiom_1_backing_entity.yaml  idiom_1_missing_backing_entity.yaml  idiom_1_no_backing_entity.yaml  idiom_2_entity_id.yaml  idiom_2_equivalence.yaml  idiom_2_main_formula_state.yaml  idiom_2_sensor_key.yaml  idiom_2_state_token.yaml  idiom_3_basic_attribute.yaml  idiom_3_missing_attribute.yaml  idiom_3_multiple_attributes.yaml  idiom_3_nested_attributes.yaml  idiom_4_entity_id.yaml  idiom_4_evaluation_order.yaml  idiom_4_sensor_key.yaml  idiom_4_state_token.yaml  idiom_5_circular_reference.yaml  idiom_5_linear_chain.yaml  idiom_5_multiple_deps.yaml  idiom_5_self_reference.yaml  idiom_6_attr_state_attribute.yaml  idiom_6_complex_refs.yaml  (+9 more)
(+792 files in other folders)
